Changed padding on sect1 to fix alignment issue

--- a/style.css
+++ b/style.css
@@ -149,7 +149,11 @@ button {
     margin-right: 2em;
     border-radius: 8px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 1em 0 1em 0;
+    padding: .5em 0 1em 0;
+}
+
+.trending li {
+    margin-bottom: .5em;
 }
 
 .sect1 {
@@ -158,7 +162,7 @@ button {
     margin-right: 2em;
     border-radius: 8px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-    margin-bottom: 2em;
+    margin-bottom: 1em;
     padding-bottom: 1em;
 }
 
